fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,7 +207,6 @@ font-weight: 700;
 nav {
   background: white;
   height: 84.51px;
-  max-width: 1366px;
   width: 100%;
   padding: 0 62px;
   position: relative;
@@ -336,7 +335,6 @@ header section {
   position: relative;
   z-index: 1;
   object-fit: cover;
-
   width: 100%;
 
 }
@@ -648,7 +646,6 @@ header section {
 /* image gallery start*/
 
 .image-gallery-wrapper {
-  max-width: 1366px;
   margin: 0 auto;
   width: 100%;
 }
@@ -666,19 +663,29 @@ header section {
 
 .row1, .row2 {
   display: flex;
+  width: 100%;
 }
 
 .divider1 {
   position: absolute;
   top: 0;
-  max-width: 1366px;
+  width: 100%;
   z-index: 1;
 }
 
 .divider2 {
   position: absolute;
   bottom: -2px;
-  max-width: 1366px;
+  width: 100%;
+
+}
+
+.gallery-item2 ,
+.gallery-item4 ,
+.gallery-item3 ,
+.gallery-item1 
+ {
+  width: 100%;
 }
 
 .gallery-item2 img,
@@ -687,6 +694,8 @@ header section {
 .gallery-item1 img,
 .divider2 img {
   vertical-align: middle;
+  object-fit: cover;
+  height: 100%;
 }
 
 .gallery-item3 {
@@ -1193,7 +1202,6 @@ line-height: 22px;
   top: 0;
   justify-content: space-between;
   padding: 0 168px;
-  max-width: 1366px;
   width: 100%;
   margin-top: 14.6%;
 }
@@ -1332,7 +1340,6 @@ line-height: 22px;
 /* footer start */
 
 .footer-wrapper {
-  max-width: 1366px;
   width: 100%;
   margin-top: -32px;
 }
@@ -1359,15 +1366,15 @@ line-height: 22px;
 
 .zilsfooter img {
   object-fit: cover;
-  height: 376px;
-  max-width: 1366px;
+  height: 500px;
   width: 100%;
   z-index: -1;
  
 }
 
 .zilsfooter_index {
-  margin-top: -20px;
+  margin-top: -30px;
+  width: 100%;
 }
 
 @media (max-width: 768px) {
@@ -1424,7 +1431,6 @@ line-height: 22px;
 /*footer augsa */
 
 .footer-augsa {
-  max-width: 1366px;
   width: 100%;
   display: flex;
   padding: 73px 4.54% 0;
@@ -1820,6 +1826,7 @@ line-height: 14.6px;
 
 .bg {
   overflow: hidden;
+  width: 100%;
   
 }
 
@@ -1861,7 +1868,6 @@ transform: rotate(-180deg);
     line-height: 35.57px;
     text-align: center;
     display: block;
-    max-width: 1366px;
     width: 100%;
     margin: 0 auto;
     margin-bottom: 0px;
@@ -2247,12 +2253,11 @@ font-family: montserrat-regular;
 /* Individual video container */
 .video-wrap1 {
   position: relative;
-  max-width: 1366px;
   width: 100%;
+    object-fit: cover;
 }
 /* video poster frame or placeholder image */
 .video-wrap1 .placeholder {
-  max-width: 1366px;
   width: 100%;
 }
 /* SVG play button container */
@@ -2550,7 +2555,6 @@ font-family: montserrat-regular;
   top: 0;
   justify-content: space-between;
   text-align: center;
-  max-width: 1366px;
   width: 100%;
   margin-top: 75px;
   padding: 0 20px;
@@ -2802,7 +2806,6 @@ transition: all 250ms cubic-bezier(.4,.25,.3,1);
 /* map canvas for google Maps */
 
 #map-canvas {
-  max-width: 1366px;
   width: 100%;
   height: 648px;
 
